# mua

./: .gitignore  README.md  README_CN.md  pyproject.toml  ruff.toml
.github/workflows/: publish.yaml
all_proto/: README.md  internal.proto
app/milvus-cli/: pyproject.toml
app/milvus-cli/mucli/: _case.py  _milvus.py  _option.py  main.py  pyinstaller.py
app/milvus-flet/: pyproject.toml
app/milvus-flet/milvus_flet/: app.py  gallerydata.py
app/milvus-flet/milvus_flet/components/: README.md  controls_grid.py  examples_view.py  gallery_view.py  left_navigation_menu.py
app/milvus-flet/milvus_flet/tools/cdc/diff/: 01_core_example.py  index.py
app/milvus-flet/milvus_flet/tools/counter/demo/: 01_count_example.py  index.py
app/milvus-flet/milvus_flet/tools/expr/param/: 01_core_example.py  index.py
app/milvus-http/: pyproject.toml
milvus_connector/: __init__.py  _interceptor.py
milvus_connector/core/: _const.py  _param.py  _types.py  milvus.py  query_node.py  util.py
milvus_connector/protocol/: common_pb2.py  data_coord_pb2.py  data_coord_pb2.pyi  data_coord_pb2_grpc.py  etcd_meta_pb2.py  etcd_meta_pb2.pyi  index_cgo_msg_pb2.py  index_cgo_msg_pb2.pyi  index_coord_pb2.py  index_coord_pb2.pyi  index_coord_pb2_grpc.py  internal_pb2.py  internal_pb2.pyi  milvus_pb2.py  plan_pb2.py  plan_pb2.pyi  proxy_pb2.py  proxy_pb2.pyi  proxy_pb2_grpc.py  query_coord_pb2.py  query_coord_pb2.pyi  query_coord_pb2_grpc.py  rg_pb2.py  root_coord_pb2.py  root_coord_pb2.pyi  root_coord_pb2_grpc.py  schema_pb2.py  segcore_pb2.py  segcore_pb2.pyi
script/: generate_proto.sh
tests/: test_milvus.py
