[tool.poetry]
name = "milvus-connector"
version = "0.1.0"
description = ""
authors = ["SimFG <1142838399@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.62.0"
grpcio-tools = "^1.62.0"
furl = "^2.1.3"
typing-extensions = "^4.10.0"
pydantic = "^2.6.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
