[tool.poetry]
name = "milvus-flet"
version = "0.1.0"
description = ""
authors = ["SimFG <1142838399@qq.com>"]
readme = "README.md"

[tool.poetry.scripts]
flet = "milvus_flet.app:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
flet = "^0.23.2"
pymilvus = "^2.4.4"
deepdiff = "^7.0.1"
loguru = "^0.7.2"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
